--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -23,7 +23,7 @@
     "from tensorboardX import SummaryWriter\n",
     "\n",
     "from dataset import PartAffordanceDataset, ToTensor, CenterCrop, Normalize\n",
-    "from dataset import Resize, RandomFlip, RandomRotate, ColorChange\n",
+    "from dataset import Resize, RandomFlip, RandomRotate, ColorChange, RandomCrop\n",
     "from model.drn import drn_c_58"
    ]
   },
@@ -41,11 +41,12 @@
     "                                   config=CONFIG,\n",
     "                                   transform=transforms.Compose([\n",
     "                                       RandomRotate(45),\n",
-    "                                       CenterCrop(CONFIG),\n",
+    "                                       RandomCrop(CONFIG),\n",
     "                                       Resize(CONFIG),\n",
     "                                       ColorChange(),\n",
     "                                       RandomFlip(),\n",
     "                                       ToTensor(CONFIG),\n",
+    "                                       Normalize()\n",
     "                                   ]))\n",
     "\n",
     "test_data = PartAffordanceDataset(CONFIG.test_data,\n",
@@ -74,9 +75,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "torch.Size([8, 8])\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n",
+      "(300, 300)\n"
+     ]
+    }
+   ],
    "source": [
     "for i, sample in enumerate(train_loader):\n",
     "    img = sample['image']\n",
@@ -84,13 +215,6 @@
     "    if i == 10:\n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
