--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16403,6 +16403,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./part-affordance-dataset/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23074"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(df) // 1000):\n",
+    "    if (i+1)*1000 < len(df):\n",
+    "        d = df[i*1000: (i+1)*1000]\n",
+    "        d.to_csv('./part-affordance-dataset/train_{}.csv'.format(i), index=None)\n",
+    "    else:\n",
+    "        d = df[i*1000:]\n",
+    "        d.to_csv('./part-affordance-dataset/train_{}.csv'.format(i), index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = glob.glob('./part-affordance-dataset/train_*.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./part-affordance-dataset/train_4.csv',\n",
+       " './part-affordance-dataset/train_15.csv',\n",
+       " './part-affordance-dataset/train_14.csv',\n",
+       " './part-affordance-dataset/train_5.csv',\n",
+       " './part-affordance-dataset/train_7.csv',\n",
+       " './part-affordance-dataset/train_16.csv',\n",
+       " './part-affordance-dataset/train_17.csv',\n",
+       " './part-affordance-dataset/train_6.csv',\n",
+       " './part-affordance-dataset/train_2.csv',\n",
+       " './part-affordance-dataset/train_13.csv',\n",
+       " './part-affordance-dataset/train_12.csv',\n",
+       " './part-affordance-dataset/train_3.csv',\n",
+       " './part-affordance-dataset/train_1.csv',\n",
+       " './part-affordance-dataset/train_10.csv',\n",
+       " './part-affordance-dataset/train_11.csv',\n",
+       " './part-affordance-dataset/train_0.csv',\n",
+       " './part-affordance-dataset/train_20.csv',\n",
+       " './part-affordance-dataset/train_21.csv',\n",
+       " './part-affordance-dataset/train_22.csv',\n",
+       " './part-affordance-dataset/train_8.csv',\n",
+       " './part-affordance-dataset/train_19.csv',\n",
+       " './part-affordance-dataset/train_18.csv',\n",
+       " './part-affordance-dataset/train_9.csv']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
