--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -545,6 +545,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.zeros((1, 256, 256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = torch.randn((8, 256, 256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = torch.cat([a, b], dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "         ...,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]],\n",
+       "\n",
+       "        [[-0.2858, -0.7670, -0.5304,  ...,  0.1446, -0.3225,  1.4257],\n",
+       "         [ 0.5527,  1.3963, -0.5061,  ...,  1.5962, -0.0037, -2.5691],\n",
+       "         [ 0.4276, -1.6818, -0.3491,  ..., -0.9040,  0.8153,  0.4837],\n",
+       "         ...,\n",
+       "         [ 2.2317,  0.0387, -2.0376,  ...,  2.0216, -1.4848, -0.2504],\n",
+       "         [-0.4412,  0.4135, -0.1002,  ..., -0.8318, -1.2113,  0.1461],\n",
+       "         [ 1.5334, -1.1749, -0.3043,  ...,  0.2135, -1.7319, -0.3815]],\n",
+       "\n",
+       "        [[ 0.2128,  0.4446,  0.1813,  ..., -0.4390, -0.9295, -0.9911],\n",
+       "         [ 1.1174, -1.1594,  0.0392,  ..., -1.4464, -0.6901,  0.9382],\n",
+       "         [ 0.2556,  0.8098,  1.9742,  ..., -0.8766, -0.6137, -0.7344],\n",
+       "         ...,\n",
+       "         [ 0.4632,  0.4602, -0.7305,  ..., -0.2574,  0.7601,  0.1164],\n",
+       "         [-1.0381, -1.0261,  0.6930,  ..., -1.3054,  0.9169,  0.4914],\n",
+       "         [-0.1790,  1.7114, -0.8724,  ..., -1.2285, -0.7379, -0.7345]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-0.1221, -0.4779,  0.7796,  ...,  0.5883, -1.3277, -1.4704],\n",
+       "         [-0.2020,  0.5579, -0.2340,  ..., -0.0120,  2.2184, -0.0851],\n",
+       "         [ 0.2453,  0.4799, -0.3649,  ..., -0.5393, -1.9047,  1.2431],\n",
+       "         ...,\n",
+       "         [-0.1488, -0.5242, -0.2637,  ..., -1.8193,  1.2346, -0.1028],\n",
+       "         [-0.9444,  0.4773,  1.6022,  ...,  0.5894,  0.0553, -0.7217],\n",
+       "         [-0.0187,  0.4626,  2.2556,  ...,  1.1887,  0.6956,  2.8424]],\n",
+       "\n",
+       "        [[ 0.3152, -1.0799,  1.7856,  ...,  0.7180,  1.2832, -0.2260],\n",
+       "         [ 0.2628,  0.2322, -1.0356,  ...,  1.4081, -0.1791, -0.2234],\n",
+       "         [ 0.0502,  1.2180, -1.6988,  ...,  1.8945, -0.7301,  0.7221],\n",
+       "         ...,\n",
+       "         [-0.6847, -0.1490, -0.1107,  ..., -2.5804,  0.6016, -1.4602],\n",
+       "         [ 1.0706,  0.6991,  0.1374,  ..., -2.0424, -1.1958, -0.3660],\n",
+       "         [-0.1350,  0.0541, -1.1663,  ...,  1.0769, -0.0363,  0.7861]],\n",
+       "\n",
+       "        [[ 2.5432, -0.1323,  0.3195,  ..., -0.9856,  0.8458,  0.3654],\n",
+       "         [ 1.3944,  1.2854,  0.8899,  ...,  0.3257,  1.0530,  3.0068],\n",
+       "         [-0.1442,  0.7766,  0.9979,  ..., -0.3620,  0.5714,  0.8134],\n",
+       "         ...,\n",
+       "         [ 0.3367, -0.2723, -0.3636,  ..., -0.8561,  1.7919, -0.7195],\n",
+       "         [ 0.9621,  0.4864, -0.0169,  ...,  0.6673, -0.2976, -0.7110],\n",
+       "         [-0.0651, -0.7516,  0.0858,  ..., -0.3906,  0.2099, -1.4018]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.zeros((20, 20))\n",
+    "b = torch.zeros((20, 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = torch.stack([a, b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 20, 20])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
