--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -305,111 +305,254 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# affordance class weight"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
+    "import numpy as np\n",
     "import torch\n",
-    "from model.drn_max import drn_c_58_max\n",
-    "from model.msc import MSC"
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = drn_c_58_max(\n",
-    "            pretrained=True, num_obj=17, num_aff=7)"
+    "path = glob.glob(\"./part-affordance-dataset/tools/*/*aff_cam_label.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MSC(model)"
+    "cnt_dict = {0:0, 1:0, 2:0, 3:0, 4:0, 5:0, 6:0, 7:0, 255:0}\n",
+    "\n",
+    "for p in path:\n",
+    "    img = Image.open(p)\n",
+    "    img = np.asarray(img)\n",
+    "    num, cnt = np.unique(img, return_counts=True)\n",
+    "    \n",
+    "    for n, c in zip(num, cnt):\n",
+    "        cnt_dict[n] += c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_dict = torch.load('./result/drn_c_58_max/best_accuracy_model.prm',\n",
-    "                            map_location=lambda storage, loc: storage)\n",
-    "model.load_state_dict(state_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = model.model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.load('./part-affordance-dataset/tools/hammer_01/hammer_01_00000001_obj.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+       "{0: 7321360010,\n",
+       " 1: 18311032,\n",
+       " 2: 4406809,\n",
+       " 3: 1983549,\n",
+       " 4: 4377947,\n",
+       " 5: 1132548,\n",
+       " 6: 1074818,\n",
+       " 7: 6837994,\n",
+       " 255: 1501084893}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "cnt_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([5.9797e-04, 2.3909e-01, 9.9345e-01, 2.2071e+00, 1.0000e+00, 3.8656e+00,\n",
+      "        4.0732e+00, 6.4024e-01])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_num = torch.tensor([7321360010, 18311032, 4406809, 1983549,\n",
+    "                        4377947, 1132548, 1074818, 6837994])\n",
+    "total = class_num.sum().item()\n",
+    "frequency = class_num.float() / total\n",
+    "median = torch.median(frequency)\n",
+    "class_weight = median / frequency\n",
+    "print(class_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_num = torch.tensor([7321360010, 18311032, 4406809, 1983549,\n",
+    "                        4377947, 1132548, 1074818, 6837994])\n",
+    "class_weight = 1. / class_num\n",
+    "print(class_weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# object class weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = glob.glob(\"./part-affordance-dataset/tools/*/*obj_cam_label.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnt_dict = {}\n",
+    "for i in range(18):\n",
+    "    cnt_dict[i]=0\n",
+    "cnt_dict[255] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in path:\n",
+    "    img = Image.open(p)\n",
+    "    img = np.asarray(img)\n",
+    "    num, cnt = np.unique(img, return_counts=True)\n",
+    "    \n",
+    "    for n, c in zip(num, cnt):\n",
+    "        cnt_dict[n] += c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(18,)"
+       "{0: 7727538416,\n",
+       " 1: 463493,\n",
+       " 2: 341973,\n",
+       " 3: 396001,\n",
+       " 4: 1550892,\n",
+       " 5: 706330,\n",
+       " 6: 499596,\n",
+       " 7: 6977046,\n",
+       " 8: 180450,\n",
+       " 9: 315860,\n",
+       " 10: 708978,\n",
+       " 11: 414156,\n",
+       " 12: 312187,\n",
+       " 13: 227372,\n",
+       " 14: 901299,\n",
+       " 15: 289115,\n",
+       " 16: 573954,\n",
+       " 17: 673327,\n",
+       " 255: 1117499155}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.shape"
+    "cnt_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_num = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7727538416, 15532029]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_num.append(cnt_dict[0])\n",
+    "c = 0\n",
+    "for i in range(1,18):\n",
+    "    c += cnt_dict[i]\n",
+    "class_num.append(c)\n",
+    "print(class_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0020, 1.0000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_num = torch.tensor(class_num)\n",
+    "total = class_num.sum().item()\n",
+    "frequency = class_num.float() / total\n",
+    "median = torch.median(frequency)\n",
+    "class_weight = median / frequency\n",
+    "print(class_weight)"
    ]
   },
   {
